5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4370/executions/1832_1648.log
== SUBMITION (2019-06-13 18:21:15) 
-- CODE:
from numpy import *
f= array(eval(input("digite algo")))
r=0
a=0
for pos in f:
	if(i>==70):
		r= r + 1
	else:
		a= a + 1
print(a)
		
-- EXECUTION TIME:
0.650404
-- ERROR:
  File "/home/codebench/codes/1832/1648/main.py", line 6
    if(i>==70):
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:21:22) 
-- CODE:
from numpy import *
f= array(eval(input("digite algo")))
r=0
a=0
for pos in f:
	if(i>==70):
		r= r + 1
	else:
		a= a + 1
print(a)
		
-- ERROR:
File "XXXX", line 6
    if(i>==70):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:21:37) 
-- CODE:
from numpy import *
f= array(eval(input("digite algo")))
r=0
a=0
for pos in f:
	if(i<==70):
		r= r + 1
	else:
		a= a + 1
print(a)
		
-- EXECUTION TIME:
0.81282
-- ERROR:
  File "/home/codebench/codes/1832/1648/main.py", line 6
    if(i<==70):
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:21:40) 
-- CODE:
from numpy import *
f= array(eval(input("digite algo")))
r=0
a=0
for pos in f:
	if(i<==70):
		r= r + 1
	else:
		a= a + 1
print(a)
		
-- ERROR:
File "XXXX", line 6
    if(i<==70):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:22:53) 
-- CODE:
from numpy import *
f= array(eval(input("digite algo")))
r=0
a=0
for pos in f:
	if(i<==70):
		r= r + 1
	else:
		a= a + 1
print(a)
		
-- ERROR:
File "XXXX", line 6
    if(i<==70):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:23:25) 
-- CODE:
from numpy import *
f= array(eval(input("digite algo")))
r=0
a=0
for pos in f:
	if(i<==70):
		r= r + 1
	else:
		a= a + 1
print(a)
		
-- ERROR:
File "XXXX", line 6
    if(i<==70):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:23:31) 
-- CODE:
from numpy import *
f= array(eval(input("digite algo")))
r=0
a=0
for pos in f:
	if(i>==70):
		r= r + 1
	else:
		a= a + 1
print(a)
		
-- ERROR:
File "XXXX", line 6
    if(i>==70):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:25:12) 
-- CODE:
from numpy import *
f= array(eval(input("digite algo")))
r=0
a=0
for pos in f:
	if(i>=70):
		r= r + 1
	else:
		a= a + 1
print(a)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:25:53) 
-- CODE:
from numpy import *
f= array(eval(input("digite algo")))
r=0
a=0
for pos in f:
	if(i>=70):
		r= r + 1
	else:
		a= a + 1
print(r)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:25:57) 
-- CODE:
from numpy import *
f= array(eval(input("digite algo")))
r=0
a=0
for pos in f:
	if(i>=70):
		r= r + 1
	else:
		a= a + 1
print(r)
		
-- EXECUTION TIME:
0.860306
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1648/main.py", line 6, in <module>
    if(i>=70):
NameError: name 'i' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:54:22) 
-- CODE:
from numpy import *
f= array(eval(input("digite algo")))
r=0
a=0
for pos in f:
	if(i>=70):
		r= r + 1
	else:
		a= a + 1
print(r)
z=(zeros(r,dtype=int))


		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:54:26) 
-- CODE:
from numpy import *
f= array(eval(input("digite algo")))
r=0
a=0
for pos in f:
	if(i>=70):
		r= r + 1
	else:
		a= a + 1
print(r)
z=(zeros(r,dtype=int))


		
-- EXECUTION TIME:
0.857604
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1648/main.py", line 6, in <module>
    if(i>=70):
NameError: name 'i' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:06:54) 
-- CODE:
from numpy import *
f= array(eval(input("vetor de frequencia:"))
a=0
for v in f:
	if(v>=70):
		a=a+1
va=zeros(a,dtype=int)
i=0
c=0
for v in f:
	if(v>70):
		va[c]=1
		c=c+1
	i= i+1
print(a)
print(va)
		
	


		
-- ERROR:
File "XXXX", line 3
    a=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:07:32) 
-- CODE:
from numpy import *
f= array(eval(input("vetor de frequencia:"))
i=0
for v in f:
	if(v>=70):
		a=a+1
va=zeros(a,dtype=int)
i=0
c=0
for v in f:
	if(v>70):
		va[c]=1
		c=c+1
	i= i+1
print(a)
print(va)
		
	


		
-- ERROR:
File "XXXX", line 3
    i=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:10:10) 
-- CODE:
from numpy import *
f= array(eval(input("vetor de frequencia:"))
r=1
for v in f:
	if(v>=70):
		a=a+1
va=zeros(a,dtype=int)
i=0
c=0
for v in f:
	if(v>70):
		va[c]=1
		c=c+1
	i= i+1
print(a)
print(va)
		
	


		
-- ERROR:
File "XXXX", line 3
    r=1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:10:29) 
-- CODE:
from numpy import *
f= array(eval(input("vetor de frequencia:"))
a=1
for v in f:
	if(v>=70):
		a=a+1
va=zeros(a,dtype=int)
i=0
c=0
for v in f:
	if(v>70):
		va[c]=1
		c=c+1
	i= i+1
print(a)
print(va)
		
	


		
-- ERROR:
File "XXXX", line 3
    a=1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:11:00) 
-- CODE:
from numpy import *
f= array(eval(input("vetor de frequencia:")))
a=1
for v in f:
	if(v>=70):
		a=a+1
va=zeros(a,dtype=int)
i=0
c=0
for v in f:
	if(v>70):
		va[c]=1
		c=c+1
	i= i+1
print(a)
print(va)
		
	


		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:11:26) 
-- CODE:
from numpy import *
f= array(eval(input("vetor de frequencia:")))
a=1
for v in f:
	if(v>=70):
		a=a+1
va=zeros(a,dtype=int)
i=0
c=0
for v in f:
	if(v>70):
		va[c]=1
		c=c+1
	i= i+1
print(a)
print(va)
		
	


		
-- EXECUTION TIME:
1.00942
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
4
[1 1 0 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
5
[1 1 0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:11:38) 
-- CODE:
from numpy import *
f= array(eval(input("vetor de frequencia:")))
a=1
for v in f:
	if(v>=70):
		a=a+1
va=zeros(a,dtype=int)
i=0
c=0
for v in f:
	if(v>70):
		va[c]=1
		c=c+1
	i= i+1
print(a)
print(va)
		
	


		
-- EXECUTION TIME:
0.723351
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
4
[1 1 0 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
4
[1 1 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
5
[1 1 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:11:44) 
-- CODE:
from numpy import *
f= array(eval(input("vetor de frequencia:")))
a=1
for v in f:
	if(v>=70):
		a=a+1
va=zeros(a,dtype=int)
i=0
c=0
for v in f:
	if(v>70):
		va[c]=1
		c=c+1
	i= i+1
print(a)
print(va)
		
	


		
-- EXECUTION TIME:
3.51311
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
4
[1 1 0 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
5
[1 1 0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:11:45) 
-- CODE:
from numpy import *
f= array(eval(input("vetor de frequencia:")))
a=1
for v in f:
	if(v>=70):
		a=a+1
va=zeros(a,dtype=int)
i=0
c=0
for v in f:
	if(v>70):
		va[c]=1
		c=c+1
	i= i+1
print(a)
print(va)
		
	


		
-- EXECUTION TIME:
4.88205
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
2
[0 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
5
[1 1 0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:11:45) 
-- CODE:
from numpy import *
f= array(eval(input("vetor de frequencia:")))
a=1
for v in f:
	if(v>=70):
		a=a+1
va=zeros(a,dtype=int)
i=0
c=0
for v in f:
	if(v>70):
		va[c]=1
		c=c+1
	i= i+1
print(a)
print(va)
		
	


		
-- EXECUTION TIME:
6.74101
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
2
[0 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
5
[1 1 0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:11:45) 
-- CODE:
from numpy import *
f= array(eval(input("vetor de frequencia:")))
a=1
for v in f:
	if(v>=70):
		a=a+1
va=zeros(a,dtype=int)
i=0
c=0
for v in f:
	if(v>70):
		va[c]=1
		c=c+1
	i= i+1
print(a)
print(va)
		
	


		
-- EXECUTION TIME:
6.97943
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
5
[1 1 0 0 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
5
[1 1 0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:11:45) 
-- CODE:
from numpy import *
f= array(eval(input("vetor de frequencia:")))
a=1
for v in f:
	if(v>=70):
		a=a+1
va=zeros(a,dtype=int)
i=0
c=0
for v in f:
	if(v>70):
		va[c]=1
		c=c+1
	i= i+1
print(a)
print(va)
		
	


		
-- EXECUTION TIME:
7.81261
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
5
[1 1 0 0 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
4
[1 1 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
5
[1 1 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:11:46) 
-- CODE:
from numpy import *
f= array(eval(input("vetor de frequencia:")))
a=1
for v in f:
	if(v>=70):
		a=a+1
va=zeros(a,dtype=int)
i=0
c=0
for v in f:
	if(v>70):
		va[c]=1
		c=c+1
	i= i+1
print(a)
print(va)
		
	


		
-- EXECUTION TIME:
5.37146
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
2
[0 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:

-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:12:31) 
-- CODE:
from numpy import *
f= array(eval(input("vetor de frequencia:")))
a=1
for v in f:
	if(v>=70):
		a=a+1
va=zeros(a,dtype=int)
i=0
c=0
for v in f:
	if(v>70):
		va[c]=1
		c=c+1
	i= i+1
print(a)
print(va)
		
	


		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:16:23) 
-- CODE:
from numpy import *
f= array(eval(input("vetor de frequencia:")))
a=1
for v in f:
	if(v<70):
		a=a+1
va=zeros(a,dtype=int)
i=0
c=0
for v in f:
	if(v<70):
		va[c]=1
		c=c+1
	i= i+1
print(a)
print(va)
		
	


		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:17:31) 
-- CODE:
from numpy import *
f= array(eval(input("vetor de frequencia:")))
a=1
for v in f:
	if(v<70):
		a=a+1
va=zeros(a,dtype=int)
i=0
c=0
for v in f:
	if(v<70):
		va[c]=1
		c=c+1
	i= i+1
print(a)
print(va)
		
	


		
-- EXECUTION TIME:
0.897725
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
4
[1 1 1 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
4
[1 1 1 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
3
[1 1 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:17:48) 
-- CODE:
from numpy import *
f= array(eval(input("vetor de frequencia:")))
a=1
for v in f:
	if(v<70):
		a=a+1
va=zeros(a,dtype=int)
i=0
c=0
for v in f:
	if(v<70):
		va[c]=1
		c=c+1
	i= i+1
print(a)
print(va)
		
	


		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:21:22) 
-- CODE:
from numpy import *
f= array(eval(input("vetor de frequencia:")))
a=1
for v in f:
	if(v<70):
		a=a+1
va=zeros(a,dtype=int)
i=0
c=0
for i range (size(f):
	if(v<70):
		va[c]=1
		c=c+1
	i= i+1
print(a)
print(va)
		
	


		
-- EXECUTION TIME:
0.58733
-- ERROR:
  File "/home/codebench/codes/1832/1648/main.py", line 10
    for i range (size(f):
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:21:47) 
-- CODE:
from numpy import *
f= array(eval(input("vetor de frequencia:")))
a=1
for v in f:
	if(v<70):
		a=a+1
va=zeros(a,dtype=int)
i=0
c=0
for i range (size(f)):
	if(v<70):
		va[c]=1
		c=c+1
	i= i+1
print(a)
print(va)
		
	


		
-- ERROR:
File "XXXX", line 10
    for i range (size(f)):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:21:49) 
-- CODE:
from numpy import *
f= array(eval(input("vetor de frequencia:")))
a=1
for v in f:
	if(v<70):
		a=a+1
va=zeros(a,dtype=int)
i=0
c=0
for i range (size(f)):
	if(v<70):
		va[c]=1
		c=c+1
	i= i+1
print(a)
print(va)
		
	


		
-- EXECUTION TIME:
0.916528
-- ERROR:
  File "/home/codebench/codes/1832/1648/main.py", line 10
    for i range (size(f)):
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:21:50) 
-- CODE:
from numpy import *
f= array(eval(input("vetor de frequencia:")))
a=1
for v in f:
	if(v<70):
		a=a+1
va=zeros(a,dtype=int)
i=0
c=0
for i range (size(f)):
	if(v<70):
		va[c]=1
		c=c+1
	i= i+1
print(a)
print(va)
		
	


		
-- EXECUTION TIME:
1.28578
-- ERROR:
  File "/home/codebench/codes/1832/1648/main.py", line 10
    for i range (size(f)):
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:36:05) 
-- CODE:
from numpy import *
f= array(eval(input("vetor de frequencia:")))
rep=0
for i in v:
	if(i<70):
		rep=rep + 1
print(rep)
c=0
b=0
z=zeros(rep,dtype=int)
for i in v:
	if(i<70):
		z[b]=c
		b=b+1
	c=c+1
print(z)

	
	


		
-- EXECUTION TIME:
0.778339
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1648/main.py", line 4, in <module>
    for i in v:
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:36:28) 
-- CODE:
from numpy import *
f= array(eval(input("vetor de frequencia:")))
rep=0
for i in v:
	if(i<70):
		rep=rep + 1
print(rep)
c=0
b=0
z=zeros(rep,dtype=int)
for i in v:
	if(i<70):
		z[b]=c
		b=b+1
	c=c+1
print(z)

	
	


		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:37:18) 
-- CODE:
from numpy import *
f= array(eval(input("vetor de frequencia:")))
rep=0
for i in f:
	if(i<70):
		rep=rep + 1
print(rep)
c=0
b=0
z=zeros(rep,dtype=int)
for i in f:
	if(i<70):
		z[b]=c
		b=b+1
	c=c+1
print(z)

	
	


		
-- EXECUTION TIME:
0.892787
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 4]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
3
[1 2 5]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[1 2]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
